--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,12 +6,23 @@
 	<title>Leaders</title>
 	<link rel="stylesheet" href="https://use.typekit.net/wnv3pvz.css">
 	<style type="text/css">
-		
+		p {
+			font-family: 'din-2014', sans-serif;
+		}
+		#tournamentName {
+			font-size: 24px;
+		}
+		#course {
+			font-size: 18px;
+		}
 	</style>
 </head>
 <body>
 	<script src="leaders.js"></script>
 	<h1 id="header"></h1>
+	<p id="tournamentName">CLUB THROWERS INVITATIONAL</p>
+	<p id="course">RIVER VIEW GOLF CLUB</p>
+
 	<div id="players"></div>
 	
 	<div id="input">
