--- a/leaderboard.html
+++ b/leaderboard.html
@@ -11,9 +11,18 @@
 		}
 		#tournamentName {
 			font-size: 24px;
+			padding: 0;
+			margin: 0;
 		}
 		#course {
 			font-size: 18px;
+			padding: 0;
+			margin: 0;
+			margin-bottom: 30px;
+		}
+		#input {
+			margin-top: 30px;
+			
 		}
 	</style>
 </head>
