--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,6 +6,9 @@
 	<title>Leaders</title>
 	<link rel="stylesheet" href="https://use.typekit.net/wnv3pvz.css">
 	<style type="text/css">
+		body {
+			font-family: "Arial", sans-serif;
+		}
 		p {
 			font-family: 'din-2014', sans-serif;
 		}
