position updating finished

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -32,8 +32,8 @@
 <body>
 	<script src="leaders.js"></script>
 	<h1 id="header"></h1>
-	<p id="tournamentName">CLUB THROWERS INVITATIONAL</p>
-	<p id="course">RIVER VIEW GOLF CLUB</p>
+	<p id="tournamentName">POMONA OPEN</p>
+	<p id="course">MOUNTAIN MEADOWS GOLF CLUB</p>
 	<div id="players"></div>
 	<div id="input">
 	<label id="inputText" for="numPlayers">How many players?</label><br>
