changed for 9 hole round at coyote hills

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -32,8 +32,8 @@
 <body>
 	<script src="leaders.js"></script>
 	<h1 id="header"></h1>
-	<p id="tournamentName">KIRKLAND SIGNATURE CLASSIC</p>
-	<p id="course">GLEN OAKS GOLF CLUB</p>
+	<p id="tournamentName">KIRKLAND SIGNATURE 9-HOLE CLASSIC</p>
+	<p id="course">COYOTE HILLS GOLF COURSE</p>
 	<div id="players"></div>
 	<div id="input">
 	<label id="inputText" for="numPlayers">How many players?</label><br>
