changed tournament title

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -32,7 +32,7 @@
 <body>
 	<script src="leaders.js"></script>
 	<h1 id="header"></h1>
-	<p id="tournamentName">KIRKLAND SIGNATURE 9-HOLE CLASSIC</p>
+	<p id="tournamentName">KIRKLAND SIGNATURE CLASSIC</p>
 	<p id="course">COYOTE HILLS GOLF COURSE</p>
 	<div id="players"></div>
 	<div id="input">
